# PUB_Dados_Financeiros_B3

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Readme.md  app.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.sh  stats.html
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md  ISSUE_TEMPLATE.yml
.github/workflows/: codeql.yml  linter.yml  main.yml
Analise/: __list_ativos__.py  analise.ipynb  relatorio.csv  rl_divida.ipynb  teste.ipynb  ult10dias.ipynb
Api/: __apifr__.py  __apipr__.py  __apiprecos__.py  __apiquant__.py  __apiretorno__.py  __apitri__.py  __list__.py
Api/crypto/: BTC-USD.csv  ETH-USD.csv  LTC-USD.csv
Api/fatos_relevantes/: AALR3.csv  ABCB4.csv  ABEV3.csv  ADHM3.csv  ADMF3.csv  AERI3.csv  AESB3.csv  AFLT3.csv  AGRO3.csv  AGXY3.csv  AHEB3.csv  ALLD3.csv  ALOS3.csv  ALPA3.csv  ALPA4.csv  ALPK3.csv  ALSO3.csv  ALUP11.csv  ALUP3.csv  ALUP4.csv  AMAR3.csv  AMBP3.csv  AMER3.csv  AMOB3.csv  ANIM3.csv  APER3.csv  ARML3.csv  ARND3.csv  ARZZ3.csv  ASAI3.csv  ATED3.csv  ATMP3.csv  ATOM3.csv  AUAU3.csv  AURA33.csv  AURE3.csv  AVLL3.csv  AXIA3.csv  AXIA6.csv  AZEV3.csv  (+496 more)
Api/historico/: AALR3.csv  ABCB4.csv  ABEV3.csv  ADHM3.csv  ADMF3.csv  AERI3.csv  AESB3.csv  AFLT3.csv  AGRO3.csv  AGXY3.csv  AHEB3.csv  ALLD3.csv  ALOS3.csv  ALPA3.csv  ALPA4.csv  ALPK3.csv  ALSO3.csv  ALUP11.csv  ALUP3.csv  ALUP4.csv  AMAR3.csv  AMBP3.csv  AMER3.csv  AMOB3.csv  ANIM3.csv  APER3.csv  ARML3.csv  ARND3.csv  ARZZ3.csv  ASAI3.csv  ATED3.csv  ATMP3.csv  ATOM3.csv  AUAU3.csv  AURA33.csv  AURE3.csv  AVLL3.csv  AXIA3.csv  AXIA6.csv  AZEV3.csv  (+483 more)
Api/indices/: BVSP.csv  DJI.csv  GSPC.csv  HSI.csv  IXIC.csv  MERV.csv  N225.csv  RUT.csv  VIX.csv
Api/moedas/: BRLUSD=x.csv  EURBRL=x.csv  EURUSD=x.csv  GBPBRL=x.csv  (+1 more)
Backup/: some_file.csv
Dados_Atual/: dados.csv
Docker/: docker-compose.yml  dockerfile
Docs/: colunasbd.md  prjt.md  tarefa.txt
SRC/: __backup__.py  __check__.py  __check_semana__.py  __conectdb__.py  __list__.py  __mainv2__.py  __query__.py
Todos/: FT.parquet.gzip  PR.parquet.gzip  TR.parquet.gzip
test/: test_site.py
(+1923 files in other folders)
