[project]
name = "pub-dados-financeiros-b3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "backoff>=2.2.1",
    "beautifulsoup4>=4.13.4",
    "fastparquet>=2024.11.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.2",
    "psycopg2>=2.9.10",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "quantstats>=0.0.76",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
